<resources>
    <string name="sHintLastname">LastName</string>
    <string name="sHintFirstName">FirstName</string>
    <string name="sHintSuffix">Suffix</string>
    <string name="sHintMiddName">MiddleName</string>
    <string name="sHintNickname">NickName</string>
    <string name="sHintBirthDate">Birth Date (DD/MM/YYYY)</string>
    <string name="sHintBpProv">Province (Birth Place)</string>
    <string name="sGenderMale">Male</string>
    <string name="sGenderFmale">Female</string>
    <string name="sGenderLGBT">LGBT</string>
    <string name="sLblGender">Gender</string>
    <string name="sHintBpTown">Town (Birth Place)</string>
    <string name="sHintCitizenship">Citizenship (Required)</string>
    <string name="sHintMotherNm">Mother\'s Maiden Name (Required)</string>
    <string name="sHintPrimaryContact">Primary Contact No. (Required)</string>
    <string name="sHint2ndContact">2nd Contact No. (Optional)</string>
    <string name="sHint3rdContact">3rd Contact No. (Optional)</string>
    <string name="sHintTelephoneNo">Telephone No.</string>
    <string name="sHintEmailAdd">Email Address</string>
    <string name="sHintFbAccount">Facebook Account</string>
    <string name="sHintViberAcc">Viber Account</string>
    <string name="sLabelCivilStatus">Civil Status</string>
    <string name="sbtnNext">Next</string>
    <string name="sLabelPresAddress">Present Address</string>
    <string name="sHintLandmark">Landmark</string>
    <string name="sHintHouseNo">House No.</string>
    <string name="sHintLotNo">Phase#/Lot#/Sitio</string>
    <string name="sHintStreet">Street</string>
    <string name="sHintProvince">Province</string>
    <string name="sHintTown">Municipality</string>
    <string name="sHintBarangay">Barangay</string>
    <string name="sLabelHouseOwnership">House Ownership</string>
    <string name="sLabelOwned">Owned</string>
    <string name="sLabelRent">Rent</string>
    <string name="sLabelCaretaker">Care Taker</string>
    <string name="sLabelPermAddress">Permanent Address</string>
    <string name="sHintCompanyNme">Company Name</string>
    <string name="sHintAddress">Street/ Building/ Barangay</string>
    <string name="sHintPosition">Specific Job/Position</string>
    <string name="sHintJobTitle">Job Title</string>
    <string name="sHintLenghtService">Lenght Of Service</string>
    <string name="sHintMonthlyIncome">Monthly Income (Required)</string>
    <string name="sHintCompanyContact">Company Contact (Required)</string>
    <string name="sHintCountryNm">Country Name</string>
    <string name="sLabelYes">Yes</string>
    <string name="sLabelNo">No</string>
<!--    <string name="sHeaderLabelSector">Employment Sector</string>-->
    <string name="sHeaderLabelSector">Is dependent employed?</string>
    <string name="sHeaderLabelEmploymentTypeSector">Employment Type</string>
    <string name="sLabelUniformPersonnel">Is applicant uniform personnel?</string>
    <string name="sLabelMilitaryPersonnel">Is applicant military personnel?</string>
    <string name="sLabelPrivate">Private</string>
    <string name="sLabelGovernment">Government</string>
    <string name="sLabelOFW">OFW</string>
    <string name="sHintMonthlyExp">Monthly Expense (Required)</string>
    <string name="sHintBusinessNm">Business Name</string>
    <string name="sHintMobileNo">Mobile No. (Required)</string>
    <string name="sHintFinanceNm">Name of Financier</string>
    <string name="sHintRangeIncm">Range of Income</string>
    <string name="sHintRetireYear">Retirement Year</string>
    <string name="sHintNatureIncm">Nature of Income</string>
    <string name="sLabelOtherSrcIncm">Other Source of Income</string>
    <string name="sLabelBankAcc">Bank Account</string>
    <string name="sLabelCreditCard">Credit Card Account</string>
    <string name="sHintElectric">Electricity</string>
    <string name="sHintFood">Food</string>
    <string name="sHintWater">Water</string>
    <string name="sHintLoan">Loan</string>
    <string name="sHintBankNme">Name of Bank</string>
    <string name="sHintAmountLmt">Amount Limit</string>
    <string name="sHintUseLenght">Length of Use</string>
    <string name="sBtnAddDependent">Add Dependent</string>
    <string name="sHintDependentFNme">Dependent Full Name</string>
    <string name="sHintAge">Age</string>
    <string name="sHintSchoolNm">Is dependent a student?</string>
    <string name="sDependentStudent">School Name</string>
    <string name="sLabelQUnitUser">Who will use the unit?</string>
    <string name="sLabelQUnitPurpose">Purpose of buying the unit.</string>
    <string name="sLabelQMonthlyAmort">Who will shoulder the monthly payment?</string>
    <string name="sLabelQDiscoverUs">How you know about us?</string>
    <string name="sHintSpecify">Please specify</string>
    <string name="sbtnAddReference">Add Reference</string>
    <string name="sLabelGarage">With safe garage</string>
    <string name="sHintLengthStay">Length of Stay (Required)</string>
    <string name="sHintRelationship">Relationship</string>
    <string name="sHintDependentRelationship">Dependent Relationship</string>
    <string name="sSchoolType">School Type</string>
    <string name="sSchoolLvl">Education Level</string>
    <string name="sHintYear">Year</string>
    <string name="sHintNewApplication">Create New Application</string>
    <string name="sbtnPrvs">Previous</string>


    <string name="header_creditApp_coMakerInfo">CO MAKER\'S INFORMATION</string>
    <string name="header_creditApp_birthPlace">BIRTH PLACE</string>
    <string name="header_creditApp_birthdayInfo">BIRTHDATE</string>
    <string name="header_creditApp_contact">CONTACT</string>
    <string name="hint_creditApp_maidenName">Applicant\'s Maiden Name</string>
</resources>